# RoyalGreen

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
res/meshes/: arcadeTest.mtl  lamp.mtl  mainLamp.mtl  new_room.mtl  pool.mtl  room.mtl  tableLamps.mtl  tempArcade.mtl
res/shaders/: CRT.frag  aim.vert  basic.frag  basic.vert  basic2D.frag  blinnPhong.frag  blinnPhong.vert  depth.frag  depth.geom  game.vert  pointDepth.frag  pointDepth.geom  spotDepth.frag  spotDepth.vert  test2D.frag  test2D.vert  tex2D.frag
src/: main.cpp
src/app/: arcade.cpp  arcade.h  path.h  room.cpp  room.h  scene.cpp  scene.h  scene_data.h  ui_manager.cpp  ui_manager.h
src/app/game2D/: animator.cpp  animator.h  background.cpp  background.h  cat.cpp  cat.h  collision_system.cpp  collision_system.h  framebuffer.cpp  framebuffer.h  game.cpp  game.h  gameHUD.cpp  gameHUD.h  game_data.h  game_obj.cpp  game_obj.h  player.cpp  player.h  projectile.cpp  projectile.h  projectile_manager.cpp  projectile_manager.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  state.h
src/app/scene3D/: arcade.cpp  arcade.h  room.cpp  room.h  scene.cpp  scene.h  scene_data.h
src/core/: action_map.cpp  action_map.h  callbacks.cpp  callbacks.h  camera.cpp  camera.h  collision.cpp  collision.h  geometry.cpp  geometry.h  input_manager.cpp  input_manager.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  utilities.cpp  utilities.h
src/graphics/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
